--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,7 +18,7 @@ android {
     }
 
     buildTypes {
-        rtcPackageName = "tuyartc-debug.aar"
+        rtcPackageName = "tuyartc-release.aar"
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
